# envoy-smtp-filter

./: Cargo.toml  README.md
.getenvoy/extension/: extension.yaml
.getenvoy/extension/examples/default/: README.md  envoy.tmpl.yaml  extension.json
examples/log-by-mail/: README.md  pom.xml
examples/log-by-mail/src/main/java/io/tetratelabs/examples/: EnterpriseJavaApp.java
examples/log-by-mail/src/main/resources/: log4j2.xml
src/: config.rs  factory.rs  filter.rs  lib.rs  stats.rs
src/smtp/: mod.rs
src/smtp/agent/: command.rs  mod.rs  session.rs  stats.rs
src/smtp/spec/: mod.rs  unknown.rs
src/smtp/spec/core/: data.rs  ehlo.rs  expn.rs  helo.rs  help.rs  mail.rs  mod.rs  noop.rs  quit.rs  rcpt.rs  reply.rs  rset.rs  syntax.rs  vrfy.rs
src/smtp/spec/extensions/: mod.rs  starttls.rs
wasm/module/: Cargo.toml
wasm/module/src/: lib.rs
