[workspace]
members = ["wasm/module"]
default-members = ["wasm/module"]

[package]
name = "envoy-smtp-filter"
version = "0.1.0"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
description = "Envoy SMTP filter"
license = "Apache-2.0"
repository = "https://github.com/tetratelabs/envoy-smtp-filter/"
readme = "README.md"
keywords = ["envoy", "extension", "wasm", "network-filter", "smtp"]
categories = ["wasm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
envoy = { package = "envoy-sdk", version = "^0.1" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
bstr = "^0.2"
